--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,15 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env
+.env.local
+.env.production.local
+.env.development.local
+
+# prisma
+prisma/*.db
+prisma/*.db-journal
 
 # vercel
 .vercel
