feat: cost-efficiency improvements
- Swap SQLite for Turso (edge SQLite with generous free tier)
  - Add @prisma/adapter-libsql and @libsql/client dependencies
  - Update prisma client to use Turso adapter when env vars present
  - Falls back to local SQLite for development

- Refund credits on API failure
  - Add refundCredit function in credits.ts
  - Refund credit when Gemini API fails (429, 500, timeout, no image)
  - Only successful generations count against credits

- Add generation hash caching
  - Hash input image + style to detect duplicate requests
  - Return cached result for same user/image/style combo
  - Saves API calls and credits on repeat requests

- Update .env.example with all required vars:
  - TURSO_DATABASE_URL
  - TURSO_AUTH_TOKEN
  - GEMINI_API_KEY
  - NEXTAUTH_SECRET
  - GOOGLE_CLIENT_ID
  - GOOGLE_CLIENT_SECRET

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
-# Database
-DATABASE_URL="file:./dev.db"
+# Database (Turso - https://turso.tech)
+# Get free database at: turso.tech
+TURSO_DATABASE_URL="libsql://your-db-name.turso.io"
+TURSO_AUTH_TOKEN="your-turso-auth-token"
 
 # NextAuth.js
-AUTH_SECRET="your-auth-secret-here-generate-with-openssl-rand-base64-32"
-AUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-auth-secret-here-generate-with-openssl-rand-base64-32"
+NEXTAUTH_URL="http://localhost:3000"
 
 # Google OAuth (https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
 
-# Gemini API
+# Gemini API (https://aistudio.google.com/apikey)
 GEMINI_API_KEY=""
